--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <body>
     <h1>Welcome to my weather app!</h1>
 
-    <footer>Coded by Joice Mota</footer>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/Joicemotamoreira" target="_blank"
+        >Joice Mota</a
+      >
+      and is
+      <a href="https://github.com/Joicemotamoreira/Weather-app" target="_blank"
+        >on GitHub</a
+      >
+      and
+      <a href="https://sunrise-weather.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >.
+    </footer>
   </body>
 </html>
