--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
-  <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
+  <body class="poppins-light">
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
 
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:50, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>☀️12°C</div>
-    </main>
+      <main>
+        <div>
+          <h1 class="poppins-light">Paris</h1>
+          <p>
+            Tuesday 14:50, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>☀️12°C</div>
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://github.com/Joicemotamoreira" target="_blank"
-        >Joice Mota</a
-      >
-      and is
-      <a href="https://github.com/Joicemotamoreira/Weather-app" target="_blank"
-        >on GitHub</a
-      >
-      and
-      <a href="https://sunrise-weather.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >.
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/Joicemotamoreira" target="_blank"
+          >Joice Mota</a
+        >
+        and is
+        <a
+          href="https://github.com/Joicemotamoreira/Weather-app"
+          target="_blank"
+          >on GitHub</a
+        >
+        and
+        <a href="https://sunrise-weather.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >.
+      </footer>
+    </div>
   </body>
 </html>
