--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">☀️</div>
-            <div class="weather-app-temperature">12</div>
-            <div class="weather-app-unit">°C</div>
+            <span class="weather-app-icon">☀️</span>
+            <span class="weather-app-temperature">14</span>
+            <span class="weather-app-unit">°C</span>
           </div>
         </div>
       </main>
