--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body class="poppins-light">
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -29,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="poppins-light weather-app-city">Paris</h1>
+            <h1 class="poppins-light weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Tuesday 14:50, scattered clouds
               <br />
@@ -60,6 +61,8 @@
           >hosted on Netlify</a
         >.
       </footer>
+
+      <script src="src/index.js"></script>
     </div>
   </body>
 </html>
