Added the search functionality using the API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="poppins-light weather-app-city" id="city">Paris</h1>
+            <h1 class="poppins-light weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Tuesday 14:50, scattered clouds
               <br />
@@ -40,7 +40,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <span class="weather-app-icon">☀️</span>
-            <span class="weather-app-temperature">14</span>
+            <span class="weather-app-temperature" id="temperature"></span>
             <span class="weather-app-unit">°C</span>
           </div>
         </div>
