Added the icon-img using API

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <span class="weather-app-icon">☀️</span>
-            <span class="weather-app-temperature" id="temperature"></span>
-            <span class="weather-app-unit">°C</span>
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
       </main>
