--- a/index.html
+++ b/index.html
@@ -45,22 +45,10 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+
+        <div class="weather-forecast" id="forecast"></div>
       </main>
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Thu</div>
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/shower-rain-day.png"
-              alt=""
-              width="45"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">18°</span>
-              <span class="weather-forecast-temperature-min">12°</span>
-            </div>
-          </div>
-        </div>
+      
       </div>
 
       <footer>
